fix: don't use break-all for link word wrapping

--- a/media/scss/webview.scss
+++ b/media/scss/webview.scss
@@ -160,7 +160,6 @@ body.vscode-high-contrast:not(.vscode-high-contrast-light) {
 a {
 	margin-left: $approxOneSpace;
 	text-decoration: none;
-	word-break: break-all;
 
 	&:first-child {
 		margin-left: 0;
